# template-ibex-plugin-cmake

./: CMakeLists.txt  README.md  ibex-myplugin-config.cmake.in
src/: CMakeLists.txt  ibex_Plugin.cpp  ibex_Plugin.h
tests/: CMakeLists.txt  TestPlugin01.cpp  TestPlugin01.h
